// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PersonFollowingConnected/FollowListItem should render 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "height": 64,
            "justifyContent": "center",
            "width": 64,
          },
          [Function],
        ]
      }
      themeSize={64}
    >
      <View
        backgroundColor={null}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(142, 142, 147, 0.2)",
            "borderRadius": 64,
            "height": 64,
            "justifyContent": "center",
            "width": 64,
          }
        }
        themeSize={64}
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={32}
          bbWidth={32}
          color="rgba(39, 39, 46, 0.3)"
          height={32}
          id="Raw"
          meetOrSlice={0}
          minX={0}
          minY={0}
          size={32}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {},
              null,
              Object {
                "flex": 0,
                "height": 32,
                "width": 32,
              },
            ]
          }
          tintColor="rgba(39, 39, 46, 0.3)"
          vbHeight={256}
          vbWidth={256}
          width={32}
        >
          <RNSVGGroup
            fill={
              Array [
                0,
                4278190080,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            font={Object {}}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={Array []}
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          >
            <RNSVGRect
              fill={null}
              fillOpacity={1}
              fillRule={1}
              height={256}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              rx={0}
              ry={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              width={256}
              x={0}
              y={0}
            />
            <RNSVGCircle
              cx={128}
              cy={96}
              fill={null}
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeMiterlimit",
                ]
              }
              r={64}
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={
                Array [
                  0,
                  1294411566,
                ]
              }
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={10}
              strokeOpacity={1}
              strokeWidth={16}
              vectorEffect={0}
              x={0}
              y={0}
            />
            <RNSVGPath
              d="M30.989,215.99064a112.03731,112.03731,0,0,1,194.02311.002"
              fill={null}
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={
                Array [
                  0,
                  1294411566,
                ]
              }
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={16}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(39, 39, 46, 0.18)",
          "borderBottomWidth": 0.5,
          "display": "flex",
          "flex": 1,
          "flexDirection": "row",
          "height": "102%",
          "marginLeft": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`PersonFollowingConnected/FollowListItem should render when Person A requested to follow the Current User 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "height": 64,
            "justifyContent": "center",
            "width": 64,
          },
          [Function],
        ]
      }
      themeSize={64}
    >
      <View
        backgroundColor={null}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(142, 142, 147, 0.2)",
            "borderRadius": 64,
            "height": 64,
            "justifyContent": "center",
            "width": 64,
          }
        }
        themeSize={64}
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={32}
          bbWidth={32}
          color="rgba(39, 39, 46, 0.3)"
          height={32}
          id="Raw"
          meetOrSlice={0}
          minX={0}
          minY={0}
          size={32}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {},
              null,
              Object {
                "flex": 0,
                "height": 32,
                "width": 32,
              },
            ]
          }
          tintColor="rgba(39, 39, 46, 0.3)"
          vbHeight={256}
          vbWidth={256}
          width={32}
        >
          <RNSVGGroup
            fill={
              Array [
                0,
                4278190080,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            font={Object {}}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={Array []}
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          >
            <RNSVGRect
              fill={null}
              fillOpacity={1}
              fillRule={1}
              height={256}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              rx={0}
              ry={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              width={256}
              x={0}
              y={0}
            />
            <RNSVGCircle
              cx={128}
              cy={96}
              fill={null}
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeMiterlimit",
                ]
              }
              r={64}
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={
                Array [
                  0,
                  1294411566,
                ]
              }
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={10}
              strokeOpacity={1}
              strokeWidth={16}
              vectorEffect={0}
              x={0}
              y={0}
            />
            <RNSVGPath
              d="M30.989,215.99064a112.03731,112.03731,0,0,1,194.02311.002"
              fill={null}
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={
                Array [
                  0,
                  1294411566,
                ]
              }
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={16}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(39, 39, 46, 0.18)",
          "borderBottomWidth": 0.5,
          "display": "flex",
          "flex": 1,
          "flexDirection": "row",
          "height": "102%",
          "marginLeft": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      />
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          bordered={false}
          disabled={false}
          pill={false}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#17B582",
              "borderColor": "#17B582",
              "borderRadius": 8,
              "borderWidth": 0.5,
              "flexDirection": "row",
              "height": 28,
              "justifyContent": "center",
              "marginLeft": 8,
              "opacity": 1,
              "overflow": "hidden",
              "paddingHorizontal": 10.4,
              "shadowColor": "rgba(0, 0, 0, 0.040000000000000036)",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#F4F7F8",
                "fontFamily": "InterUI-Bold",
                "fontSize": 12,
                "lineHeight": 18,
              }
            }
          >
            Confirm
          </Text>
        </View>
      </View>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          bordered={true}
          disabled={false}
          pill={false}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "transparent",
              "borderColor": "#17B582",
              "borderRadius": 8,
              "borderWidth": 0.5,
              "flexDirection": "row",
              "height": 28,
              "justifyContent": "center",
              "marginLeft": 8,
              "opacity": 1,
              "overflow": "hidden",
              "paddingHorizontal": 10.4,
              "shadowColor": "rgba(0, 0, 0, 0.040000000000000036)",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#17B582",
                "fontFamily": "InterUI-Bold",
                "fontSize": 12,
                "lineHeight": 18,
              }
            }
          >
            Hide
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PersonFollowingConnected/FollowListItem should render when the Current User does not follow Person A 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "height": 64,
            "justifyContent": "center",
            "width": 64,
          },
          [Function],
        ]
      }
      themeSize={64}
    >
      <View
        backgroundColor={null}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(142, 142, 147, 0.2)",
            "borderRadius": 64,
            "height": 64,
            "justifyContent": "center",
            "width": 64,
          }
        }
        themeSize={64}
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={32}
          bbWidth={32}
          color="rgba(39, 39, 46, 0.3)"
          height={32}
          id="Raw"
          meetOrSlice={0}
          minX={0}
          minY={0}
          size={32}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {},
              null,
              Object {
                "flex": 0,
                "height": 32,
                "width": 32,
              },
            ]
          }
          tintColor="rgba(39, 39, 46, 0.3)"
          vbHeight={256}
          vbWidth={256}
          width={32}
        >
          <RNSVGGroup
            fill={
              Array [
                0,
                4278190080,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            font={Object {}}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={Array []}
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          >
            <RNSVGRect
              fill={null}
              fillOpacity={1}
              fillRule={1}
              height={256}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              rx={0}
              ry={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              width={256}
              x={0}
              y={0}
            />
            <RNSVGCircle
              cx={128}
              cy={96}
              fill={null}
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeMiterlimit",
                ]
              }
              r={64}
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={
                Array [
                  0,
                  1294411566,
                ]
              }
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={10}
              strokeOpacity={1}
              strokeWidth={16}
              vectorEffect={0}
              x={0}
              y={0}
            />
            <RNSVGPath
              d="M30.989,215.99064a112.03731,112.03731,0,0,1,194.02311.002"
              fill={null}
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={
                Array [
                  0,
                  1294411566,
                ]
              }
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={16}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(39, 39, 46, 0.18)",
          "borderBottomWidth": 0.5,
          "display": "flex",
          "flex": 1,
          "flexDirection": "row",
          "height": "102%",
          "marginLeft": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      />
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          bordered={false}
          disabled={false}
          pill={false}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#17B582",
              "borderColor": "#17B582",
              "borderRadius": 8,
              "borderWidth": 0.5,
              "flexDirection": "row",
              "height": 28,
              "justifyContent": "center",
              "marginLeft": 8,
              "opacity": 1,
              "overflow": "hidden",
              "paddingHorizontal": 10.4,
              "shadowColor": "rgba(0, 0, 0, 0.040000000000000036)",
              "shadowOffset": Object {
                "height": 2,
                "width": 0,
              },
              "shadowOpacity": 1,
              "shadowRadius": 8,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#F4F7F8",
                "fontFamily": "InterUI-Bold",
                "fontSize": 12,
                "lineHeight": 18,
              }
            }
          >
            Follow
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`PersonFollowingConnected/FollowListItem should render when the Current user requested to follow Person A 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingHorizontal": 16,
        "paddingVertical": 8,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "height": 64,
            "justifyContent": "center",
            "width": 64,
          },
          [Function],
        ]
      }
      themeSize={64}
    >
      <View
        backgroundColor={null}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(142, 142, 147, 0.2)",
            "borderRadius": 64,
            "height": 64,
            "justifyContent": "center",
            "width": 64,
          }
        }
        themeSize={64}
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={32}
          bbWidth={32}
          color="rgba(39, 39, 46, 0.3)"
          height={32}
          id="Raw"
          meetOrSlice={0}
          minX={0}
          minY={0}
          size={32}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {},
              null,
              Object {
                "flex": 0,
                "height": 32,
                "width": 32,
              },
            ]
          }
          tintColor="rgba(39, 39, 46, 0.3)"
          vbHeight={256}
          vbWidth={256}
          width={32}
        >
          <RNSVGGroup
            fill={
              Array [
                0,
                4278190080,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            font={Object {}}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={Array []}
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          >
            <RNSVGRect
              fill={null}
              fillOpacity={1}
              fillRule={1}
              height={256}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              rx={0}
              ry={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              width={256}
              x={0}
              y={0}
            />
            <RNSVGCircle
              cx={128}
              cy={96}
              fill={null}
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeMiterlimit",
                ]
              }
              r={64}
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={
                Array [
                  0,
                  1294411566,
                ]
              }
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={10}
              strokeOpacity={1}
              strokeWidth={16}
              vectorEffect={0}
              x={0}
              y={0}
            />
            <RNSVGPath
              d="M30.989,215.99064a112.03731,112.03731,0,0,1,194.02311.002"
              fill={null}
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                  "stroke",
                  "strokeWidth",
                  "strokeLinecap",
                  "strokeLinejoin",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={
                Array [
                  0,
                  1294411566,
                ]
              }
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={1}
              strokeLinejoin={1}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={16}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderBottomColor": "rgba(39, 39, 46, 0.18)",
          "borderBottomWidth": 0.5,
          "display": "flex",
          "flex": 1,
          "flexDirection": "row",
          "height": "102%",
          "marginLeft": 8,
        }
      }
    >
      <Text
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      />
    </View>
  </View>
</View>
`;
